# llnim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dynamic_load.cpp  dynamic_load.h  main.cpp  plug.h
api/: animation.cpp  animation.h  api.cpp  api.h  easings.h  env.h  raylib_ref.h
api/LLNIM_API_warper/: Cargo.toml
api/LLNIM_API_warper/src/: lib.rs  raylib_ref.rs
api/llnim_rs/: Cargo.toml
api/llnim_rs/src/: animation.rs  easings.rs  env.rs  lib.rs  raylib_ref.rs
examples/: array.c  battary.c  blank.c  compile.cmake  cube_sine.c
examples/c/: array.c  battary.c  blank.c  compile.cmake  cube_sine.c  keyframes.c
examples/cpp/: array.cpp  battary.cpp  blank.cpp  compile.cmake  cube_sine.cpp  keyframes.cpp
examples/rust/array/: Cargo.toml
examples/rust/array/src/: lib.rs
examples/rust/battary/: Cargo.toml
examples/rust/battary/src/: lib.rs
examples/rust/blank/: Cargo.toml
examples/rust/blank/src/: lib.rs
examples/rust/cube-sine/: Cargo.toml
examples/rust/cube-sine/src/: lib.rs
examples/rust/keyframes/: Cargo.toml
examples/rust/keyframes/src/: lib.rs
scripts/: ffmpeg.py
un/: animation.cpp  animation.h
